--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,1 @@
----
-layout: blog
-title: Amazing Blog
-icon: fa-pencil
-order: 2
----
+<!-- --- --> layout: blog title: Amazing Blog icon: fa-pencil order: 2 ---
