--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,6 +4,6 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/face1.jpg" alt="" /></a>
+<a href="#" class="image featured1"><img src="assets/images/face1.jpg" alt="" /></a>
 
 <p>Жизнь вкусна и разнообразна!</p>
