--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,15 +1,19 @@
 ---
 title: Начало
-cover-photo: assets/images/banner.jpg
+cover-photo: assets/images/banner2.jpg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-arrows
-order: 1
+orde: 1
 ---
-<header>
+	<p>
   Если Вы ищете изумительный тортик - приветствую в шужном месте!!
-</header>
+  </p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
+<!-- <a href="#" class="image featured"><img src="assets/images/face1.jpg" alt="" /></a> -->
+<!-- 
 <footer>
   <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-</footer>
+C:\Users\atargon\AppData\Roaming\Easeware\DriverEasy\drivers\ugcvtifo.0tk
+</footer> -->
