--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,6 @@
-<!-- --- --> layout: blog title: Amazing Blog icon: fa-pencil order: 2 ---
+---
+layout: blog
+title: Заказать
+icon: fa-birthday-cake
+order: 2
+---
