--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -4,10 +4,10 @@ cover-photo: assets/images/banner2.jpg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-arrows
-orde: 1
+order: 1
 ---
 	<p>
-  Если Вы ищете изумительный тортик - приветствую в шужном месте!!
+  Если Вы ищете изумительный тортик - приветствую в нужном месте!!
   </p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
