--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,50 +4,15 @@ icon: fa-th
 order: 2
 ---
 
-
 <p>Мои работы:</p>
+{% include gallery-new.html gallery=site.data.galleries.output_carrot %}
 
-  <div class="row">
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/bg_about.jpg' | relative_url }}" alt="Морковный торт" /></a>
-        <header>
-          <h3>Морковный торт</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
-        <header>
-          <h3>Rhoncus Semper</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
-        <header>
-          <h3>Magna Nullam</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic05.jpg' | relative_url }}" alt="Natoque Vitae" /></a>
-        <header>
-          <h3>Natoque Vitae</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic06.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
-        <header>
-          <h3>Dolor Penatibus</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
-        <header>
-          <h3>Orci Convallis</h3>
-        </header>
-      </div>
-    </div>
-  </div>
+<!-- src="{{ 'assets/images/bg_about.jpg' | relative_url }}" alt="Морковный торт" /> -->
+<!-- <div class="row">`
+  <div class="4u 12u$(mobile)">
+    <div class="item">
+      <a href="{{ site.url }}{{ site.baseurl }}/assets/images/{{ include.gallery.picture_path }}/{{ picture.original }}" class="image fit"><img 
+	  src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ include.gallery.picture_path }}/{{ picture.thumbnail }}"
+  </a>
+     <h3>Морковный торт</h3>
+</div> -->
