--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -3,7 +3,6 @@ title: Обо мне
 icon: fa-user
 order: 3
 ---
-
-<a href="#" class="image featured1"><img src="assets/images/face1.jpg" alt="" /></a>
-
+<a href="#gallery" class="image featured1"><img src="assets/images/face1.jpg" alt="" /></a>
+<br><br>
 <p>Жизнь вкусна и разнообразна!</p>
