--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -3,16 +3,5 @@ title: Галерея
 icon: fa-th
 order: 2
 ---
-
-<p>Мои работы:</p>
+<p id="gallery">Мои работы:</p>
 {% include gallery-new.html gallery=site.data.galleries.output_carrot %}
-
-<!-- src="{{ 'assets/images/bg_about.jpg' | relative_url }}" alt="Морковный торт" /> -->
-<!-- <div class="row">`
-  <div class="4u 12u$(mobile)">
-    <div class="item">
-      <a href="{{ site.url }}{{ site.baseurl }}/assets/images/{{ include.gallery.picture_path }}/{{ picture.original }}" class="image fit"><img 
-	  src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ include.gallery.picture_path }}/{{ picture.thumbnail }}"
-  </a>
-     <h3>Морковный торт</h3>
-</div> -->
