--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,6 +1,6 @@
 ---
 title: Начало
-cover-photo: assets/images/banner2.jpg
+cover-photo: assets/images/Lichtfestival-2.png.jp-1400x1050_fgnhq9_c_scale,w_1400.jpg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-arrows
