--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,12 +1,10 @@
 ---
 title: Начало
-cover-photo: assets/images/Lichtfestival-2.png.jp-1400x1050_fgnhq9_c_scale,w_1400.jpg
+cover-photo: assets/images/banner3.jpg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-arrows
 order: 1
 ---
-	<p>
-  Если Вы ищете изумительный тортик - приветствую в нужном месте!!
-  </p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- <p id="text" ">Если Вы ищете изумительный тортик - приветствую в нужном месте!!</p>
+ -->
