--- a/_cakes/morkovniy.html
+++ b/_cakes/morkovniy.html
@@ -1,6 +1,12 @@
 ---
-layout: blog
+layout: page
 title: Морковный
 permalink: "/carrot"
 ---
 
+<span class="image right"><img src="{{ 'assets/images/carrot.png' | relative_url }}" alt="" /></span>
+<h3>или Carrot cake - 280грн/кг</h3>
+<p>Влажные коржи, насищенно красного цвета с легким шоколадным послевкусием.
+<br>Сырно – сливочный крем (по желанию может быть с кремом на основе маскарпоне +30 грн) и клубничный конфитюр.</p>
+
+{% include terms.html %}
