--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -1,15 +1,15 @@
 ---
 layout: page
 title: Капкейки
-permalink: "/cupcakes"
+permalink: "/cakes"
 ---
 
-<span class="image"><img src="{{ 'assets/images/cupcakes.jpg' | relative_url }}" alt="" /></span>
-<h3>180 грн/пачка</h3>
+<span class="image"><img src="{{ 'assets/images/cakes.jpg' | relative_url }}" alt="" /></span>
+<h3>210 грн/пачка</h3>
 <ul>
 	<li>Морковные с карамелью и шапочкой с кремчизом</li>
-	<li>Ванильные с конфитюром клубничним либо вишневым</li>
-	<li>шоколадные с грецким орешком с апельсиновым курдом</li>
+	<li>Цитрусовые с конфитюром клубничним либо вишневым</li>
+	<li>Шоколадные с грецким орешком с апельсиновым курдом</li>
 </ul>
 
 {% include terms.html %}
