--- a/_cakes/mareng.html
+++ b/_cakes/mareng.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: Меренг
-permalink: "/mereng"
+title: Мерегна
+permalink: "/meregn"
 ---
 
-<span class="image"><img src="{{ 'assets/images/mareng.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/meregn.jpg' | relative_url }}" alt="" /></span>
 <!-- <h3>330 грн/кг</h3> -->
 <ul>
 	<li>Классика</li>
