--- a/_cakes/morkovniy.html
+++ b/_cakes/morkovniy.html
@@ -6,7 +6,6 @@ permalink: "/carrot"
 
 <span class="image right"><img src="{{ 'assets/images/carrot.png' | relative_url }}" alt="" /></span>
 <h3>или Carrot cake - 280грн/кг</h3>
-<p>Влажные коржи, насищенно красного цвета с легким шоколадным послевкусием.
-<br>Сырно – сливочный крем (по желанию может быть с кремом на основе маскарпоне +30 грн) и клубничный конфитюр.</p>
+<p>Пряные коржы с добавлением корици и мускатного ореха, с морковкой,которая совсем не чувствуется,но добавляет пишность и сочность коржам.Большое количество грецких орешков и миндаля.Сливочный крем и домашний карамельный соус в прослойке.</p>
 
 {% include terms.html %}
