--- a/_cakes/caramel.html
+++ b/_cakes/caramel.html
@@ -4,7 +4,7 @@ title: Фундучно-карамельный
 permalink: "/caramel"
 ---
 
-<span class="image"><img src="{{ 'assets/images/.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/funduk.jpg' | relative_url }}" alt="" /></span>
 <h3>330 грн/кг</h3>
 <p>Бисквиты на основе фундучной муки, домашняя сливочная карамель с жареным дробленным фундуком и карамельным кремом.</p>
 
