added several cakes

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -3,5 +3,5 @@ title: Галерея
 icon: fa-th
 order: 2
 ---
-<p id="gallery">Мои работы:</p>
+<!-- <p id="gallery">Мои работы:</p> -->
 {% include gallery-new.html gallery=site.data.galleries.output_carrot %}
