--- a/_cakes/barhat.html
+++ b/_cakes/barhat.html
@@ -4,13 +4,6 @@ title: Красный бархат
 permalink: "/barhat"
 ---
 <span class="image"><img src="{{ 'assets/images/velvet.jpg' | relative_url }}" alt="" /></span>
-<dl>
-    <dt><h3>или Red Velvet - 290 грн/кг:</h3></dt>
-    <dd>
-        <p>Влажные коржи, насищенно красного цвета с легким шоколадным послевкусием.
-            <br>Сырно – сливочный крем (по желанию может быть с кремом на основе маскарпоне +30 грн) и клубничный конфитюр.</p>
-    </dd>
-    <dt><h3>Интерпретация "шоколад-вишня":</h3></dt>
-    <dd><p>Шоколадные влажные коржи, шоколадный мусс на темном бельгийском шоколаде и вишня в сливочном креме.</p></dd>
-</dl>
+<h3>или Red Velvet - 290 грн/кг:</h3>
+<p>Влажные коржи, насищенно красного цвета с легким  шоколадным послевкусием. Сырно–сливочный крем (по желанию может быть с кремом на основе маскарпоне +30 грн) и клубничный конфитюр. Красный цвет достигаеться качественным !! пищевым, совершенно безопасным красителем фирмы Americolor.</p>
 {% include terms.html %}
