corrected several descriptions

--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -5,7 +5,7 @@ permalink: "/cakes"
 ---
 
 <span class="image"><img src="{{ 'assets/images/cakes.jpg' | relative_url }}" alt="" /></span>
-<h3>210 грн/пачка</h3>
+<h3>от 30 грн/штука</h3>
 <ul>
 	<li>Морковные с карамелью и шапочкой с кремчизом</li>
 	<li>Цитрусовые с конфитюром клубничним либо вишневым</li>
