--- a/_cakes/hummingbird.html
+++ b/_cakes/hummingbird.html
@@ -4,7 +4,7 @@ title: Колибри
 permalink: "/hummingbird"
 ---
 
-<span class="image"><img src="{{ 'assets/images/hummingbird.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/.jpg' | relative_url }}" alt="" /></span>
 <h3>или Hummingbird cake - 280грн/кг</h3>
 <p>Необычные и вкусные коржи, в состав которых входит ананас (консервированный), банан и натуральный экстрат ванили. Прослойка ганаша на белом шоколаде и ананас , укутаные в легкий сливочный крем.</p>
 
