--- a/_cakes/mareng.html
+++ b/_cakes/mareng.html
@@ -1,14 +1,14 @@
 ---
 layout: page
-title: Мерегна
-permalink: "/meregn"
+title: Меренга 
+permalink: "/mereng"
 ---
 
-<span class="image"><img src="{{ 'assets/images/meregn.jpg' | relative_url }}" alt="" /></span>
-<!-- <h3>330 грн/кг</h3> -->
+<span class="image"><img src="{{ 'assets/images/mereng.jpg' | relative_url }}" alt="mereng" /></span>
+<h3>или безе:</h3>
 <ul>
-	<li>Классика</li>
-	<li>Шоколадные</li>
+	<li>класические</li>
+	<li>шоколадные</li>
 </ul>
 Могут быть на палочке. Идеально подходят для детских праздников.
 
