--- a/_cakes/morkovniy.html
+++ b/_cakes/morkovniy.html
@@ -4,7 +4,7 @@ title: Морковный
 permalink: "/carrot"
 ---
 
-<span class="image right"><img src="{{ 'assets/images/carrot.png' | relative_url }}" alt="" /></span>
+<span class="image right"><img src="{{ 'assets/images/.png' | relative_url }}" alt="" /></span>
 <h3>или Carrot cake - 280грн/кг</h3>
 <p>Пряные коржы с добавлением корици и мускатного ореха, с морковкой,которая совсем не чувствуется,но добавляет пишность и сочность коржам.Большое количество грецких орешков и миндаля.Сливочный крем и домашний карамельный соус в прослойке.</p>
 
