--- a/404.html
+++ b/404.html
@@ -7,4 +7,4 @@ hide: true
 robots: noindex, nofollow
 canonical: false
 ---
-<p>The requested page could not be found.</p>
+<p>К сожалению, не могу найти такую страницу.</p>
