--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -1,10 +1,12 @@
 ---
 title: Написать
 icon: fa-envelope
-order: 4
+order: 6
 ---
 
-<p>Ваше сообщение, пожелание или заказ:</p>
+<p>Мои контакы</p>
+
+
 
 <form method="post" action="https://formspree.io/{{ site.email }}">
   <div class="row">
