--- a/_cakes/barhat.html
+++ b/_cakes/barhat.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Красный бархат
-permalink: "{{site.url}}{{site.baseurl}}/barhat"
+permalink: "/barhat"
 ---
 <span class="image"><img src="{{ 'assets/images/velvet.jpg' | relative_url }}" alt="" /></span>
 <h3>или Red Velvet - 290 грн/кг:</h3>
