several changes in text

--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -8,7 +8,7 @@ permalink: "/cakes"
 <h3>от 30 грн/штука</h3>
 <ul>
 	<li>Морковные с карамелью и шапочкой с кремчизом</li>
-	<li>Цитрусовые с конфитюром клубничним либо вишневым</li>
+	<li>Цитрусовые с конфитюром клубничным либо вишневым</li>
 	<li>Шоколадные с грецким орешком с апельсиновым курдом</li>
 </ul>
 
