--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -5,4 +5,4 @@ order: 3
 ---
 <a href="#gallery" class="image featured1"><img src="assets/images/face1.jpg" alt="" /></a>
 <br><br>
-<h1>Дорогой Читатель! Добро пожаловать на мою вкусную страничку. <br> Я, Таня, жена и мама двох деток. <br> Люблю готовить и удивлять чем-то сладенько-вкусненьким своих близких. <br> Именно мои близкие вдохновили меня начать удивлять не только их. :-) <br>Bon Appétit!</h1>
+<h1>Дорогой Читатель! Добро пожаловать на мою вкусную страничку. <br> Я, Таня, жена и мама двух деток. <br> Люблю готовить и удивлять чем-то сладенько-вкусненьким своих близких. <br> Именно мои близкие вдохновили меня начать удивлять не только их. :-) <br>Bon Appétit!</h1>
