Added text 'torty na zakaz'

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -6,5 +6,4 @@ auto-header: none
 icon: fa-arrows
 order: 1
 ---
-<!-- <p id="text" ">Если Вы ищете изумительный тортик - приветствую в нужном месте!!</p>
- -->
+<!-- <p id="text" style="color:red">Торты на заказ в г.Бровары.</p> -->
