--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -3,6 +3,6 @@ title: Обо мне
 icon: fa-user
 order: 3
 ---
-<a href="#gallery" class="image featured1"><img src="assets/images/face1.jpg" alt="" /></a>
+<a href="#gallery" class="image featured1"><img src="assets/images/face1.jpg" alt="Avatar of Татьяна Таргоний" /></a>
 <br><br>
 <h1>Дорогой Читатель! Добро пожаловать на мою вкусную страничку. <br> Я, Таня, жена и мама двух деток. <br> Люблю готовить и удивлять чем-то сладенько-вкусненьким своих близких. <br> Именно мои близкие вдохновили меня начать удивлять не только их. :-) <br>Bon Appétit!</h1>
