--- a/_cakes/caramel.html
+++ b/_cakes/caramel.html
@@ -3,7 +3,17 @@ layout: page
 title: Фундучно-карамельный 
 permalink: "/caramel"
 ---
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Фундучно-карамельный торт",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/funduk.jpg"
+    ],
+  "description": "Изумительно вкусный фундучно-карамельный торт на заказ в г. Бровары."
+}
+</script>
 <span class="image"><img src="{{ 'assets/images/funduk.jpg' | relative_url }}" alt="" /></span>
 <h3>330 грн/кг</h3>
 <p>Бисквиты на основе фундучной муки, домашняя сливочная карамель с жареным дробленным фундуком и карамельным кремом.</p>
