--- a/_cakes/carrot.html
+++ b/_cakes/carrot.html
@@ -3,9 +3,19 @@ layout: page
 title: Морковный
 permalink: "/carrot"
 ---
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Морковный торт",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/funduk.jpg"
+    ],
+  "description": "Изумительно вкусный морковный торт на заказ в г. Бровары."
+}
+</script>
 <span class="image right"><img src="{{ 'assets/images/.png' | relative_url }}" alt="" /></span>
 <h3>или Carrot cake - 280грн/кг</h3>
-<p>Пряные коржи с добавлением корицы и мускатного ореха, с морковкой, которая совсем не чувствуется, но добавляет пышность и сочность коржам.Большое количество грецких орешков и миндаля.Сливочный крем и домашний карамельный соус в прослойке.</p>
+<p>Пряные коржи с добавлением корицы и мускатного ореха, с морковкой, которая совсем не чувствуется, но добавляет пышность и сочность коржам. Большое количество грецких орешков и миндаля. Сливочный крем и домашний карамельный соус в прослойке.</p>
 
 {% include terms.html %}
