--- a/_cakes/cherry-chocolate.html
+++ b/_cakes/cherry-chocolate.html
@@ -3,6 +3,17 @@ layout: page
 title: Шоколадно-вишневый
 permalink: "/cherry-chocolate"
 ---
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Шоколадно-вишневый торт",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/cut.jpg"
+    ],
+  "description": "Изумительно вкусный шоколадно-вишневый торт на заказ в г. Бровары."
+}
+</script>
 <span class="image"><img src="{{ 'assets/images/cut.jpg' | relative_url }}" alt="" /></span>
 <h3>300 грн/кг</h3>
 <p>Шоколадные влажные коржи, шоколадный мусс на темном бельгийском шоколаде и  вишня в сливочном креме.</p>
