--- a/_cakes/hummingbird.html
+++ b/_cakes/hummingbird.html
@@ -3,6 +3,17 @@ layout: page
 title: Колибри 
 permalink: "/hummingbird"
 ---
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Торт Колибри",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/cut.jpg"
+    ],
+  "description": "Изумительно вкусный торт Колибри на заказ в г. Бровары."
+}
+</script>
 
 <span class="image"><img src="{{ 'assets/images/.jpg' | relative_url }}" alt="" /></span>
 <h3>или Hummingbird cake - 280грн/кг</h3>
