--- a/_cakes/mareng.html
+++ b/_cakes/mareng.html
@@ -3,7 +3,17 @@ layout: page
 title: Меренга 
 permalink: "/mereng"
 ---
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Меренга",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/mereng.jpg"
+    ],
+  "description": "Изумительно вкусная Меренга на заказ в г. Бровары."
+}
+</script>
 <span class="image"><img src="{{ 'assets/images/mereng.jpg' | relative_url }}" alt="mereng" /></span>
 <h3>или безе:</h3>
 <ul>
