--- a/_cakes/velvet.html
+++ b/_cakes/velvet.html
@@ -3,6 +3,17 @@ layout: page
 title: Красный бархат
 permalink: "/velvet"
 ---
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Торт Красный бархат",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/velvet.jpg"
+    ],
+  "description": "Изумительно вкусный торт Красный бархат на заказ в г. Бровары."
+}
+</script>
 <span class="image"><img src="{{ 'assets/images/velvet.jpg' | relative_url }}" alt="" /></span>
 <h3>или Red Velvet - 290 грн/кг:</h3>
 <p>Влажные коржи, насыщенно красного цвета с легким  шоколадным послевкусием. Сырно–сливочный крем и клубничный конфитюр. Красный цвет достигается качественным !! пищевым, совершенно безопасным красителем фирмы Americolor.</p>
