--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -3,7 +3,17 @@ layout: page
 title: Капкейки
 permalink: "/cakes"
 ---
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "Капкейки",
+  "image": [
+    "http://sweetcake.biz.ua/assets/images/cakes.jpg"
+    ],
+  "description": "Изумительно вкусные капкейки на заказ в г. Бровары."
+}
+</script>
 <span class="image"><img src="{{ 'assets/images/cakes.jpg' | relative_url }}" alt="" /></span>
 <h3>от 30 грн/штука</h3>
 <ul>
