--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -15,11 +15,20 @@ permalink: "/cakes"
 }
 </script>
 <span class="image"><img src="{{ 'assets/images/cakes.jpg' | relative_url }}" alt="" /></span>
-<h3>от 30 грн/штука</h3>
+<h2>Основа:</h2>
 <ul>
-	<li>Морковные с карамелью и шапочкой с кремчизом</li>
-	<li>Цитрусовые с конфитюром клубничным либо вишневым</li>
-	<li>Шоколадные с грецким орешком с апельсиновым курдом</li>
+  <li>Морковь</li>
+  <li>Супер шоколад</li>
+  <li>Цитрус</li>
 </ul>
+<h2>Начинки:</h2>
+<ul>
+	<li>Апельсиновый/лимонный курд</li>
+	<li>Ягодный конфетюр (вишня, клубника, малина, ежевика, черника, клюква)</li>
+	<li>Домашняя карамель</li>
+</ul>
+Количество капкейков для заказа от 6 шт.<br/>
+6 шт. - 240 грн<br/>
+9 шт. - 310 грн
 
-{% include terms.html %}
+
