--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Капкейки
-permalink: "/cakes"
+permalink: "/cakes"  
 ---
 <script type="application/ld+json">
 {
@@ -29,6 +29,7 @@ permalink: "/cakes"
 </ul>
 Количество капкейков для заказа от 6 шт.<br/>
 6 шт. - 240 грн<br/>
-9 шт. - 310 грн
+9 шт. - 315 грн<br/>
+12 шт. - 360 грн
 
 
