--- a/_sections/action.html
+++ b/_sections/action.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Акция покупателю!
-icon: fa-fa-bell
-order: 3
+icon: fa fas fa-bell
+order: 2
 ---
 Каждому покупателю скидка 100 грн на любой торт!
 
