--- a/_sections/action.html
+++ b/_sections/action.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Акция покупателю!
-icon: fa fas fa-bell
+icon: fas fa-bell
 order: 2
 ---
-Каждому покупателю скидка 100 грн на любой торт!
+<h2>Каждому покупателю скидка 100 грн на любой торт!</h2>
 
