--- a/_sections/action.html
+++ b/_sections/action.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Акция покупателю!
+title: Акция!
 icon: fas fa-bell
 order: 2
 ---
-<h2>Каждому покупателю скидка 100 грн на любой торт!</h2>
+<h3>Каждому покупателю скидка <i>100 грн</i> на любой торт!</h3>
 
