--- a/_sections/action.html
+++ b/_sections/action.html
@@ -4,5 +4,5 @@ title: Акция!
 icon: fas fa-bell
 order: 2
 ---
-<h3>Каждому покупателю скидка <i>100 грн</i> на любой торт!</h3>
+<h3>Каждому покупателю скидка <i><b>100 грн</b></i> на любой торт!</h3>
 
