--- a/_cakes/velvet.html
+++ b/_cakes/velvet.html
@@ -16,5 +16,5 @@ permalink: "/velvet"
 </script>
 <span class="image"><img src="{{ 'assets/images/velvet.jpg' | relative_url }}" alt="" /></span>
 <h3>или Red Velvet - 290 грн/кг:</h3>
-<p>Влажные коржи, насыщенно красного цвета с легким  шоколадным послевкусием. Сырно–сливочный крем и клубничный конфитюр. Красный цвет достигается качественным !! пищевым, совершенно безопасным красителем фирмы Americolor.</p>
+<p>Влажные коржи, насыщенно красного цвета с легким  шоколадным послевкусием. Сырно–сливочный крем и клубничная прослойка. Красный цвет достигается качественным !! пищевым, совершенно безопасным красителем фирмы Americolor.</p>
 {% include terms.html %}
