--- a/_cakes/chocolate-rassberry-caramel.html
+++ b/_cakes/chocolate-rassberry-caramel.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Шоколад-Малина-Каремель
+title: Шоколад-Малина-Карамель
 permalink: "/choc-ras-car"
 ---
 <script type="application/ld+json">
@@ -9,12 +9,12 @@ permalink: "/choc-ras-car"
   "@type": "Product",
   "name": "Торт Шоколад-Малина-Карамель",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/choc-ras-car.jpg"
+    "http://sweetcake.biz.ua/assets/images/choc-ras-car.jpeg"
     ],
   "description": "Шоколад-Малина-Карамель бархат на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/choc-ras-car.jpg' | relative_url }}" alt="" /></span>
-<h3>или Шоколад-Малина-Карамель - 300 грн/кг:</h3>
-<p>Изумительно вкусные шоколадные коржи.</p>
+<span class="image"><img src="{{ 'assets/images/choc-ras-car.jpeg' | relative_url }}" alt="" /></span>
+<h3> - 300 грн/кг:</h3>
+<p>Шоколадные коржи, малиновый конфитюр, взбитая домашняя сливочная карамель. Крем на основе творожного сыра.</p>
 {% include terms.html %}
