added new photos

--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -9,12 +9,12 @@ permalink: "/cakes"
   "@type": "Product",
   "name": "Капкейки",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/cakes.jpg"
+    "http://sweetcake.biz.ua/assets/images/cakes1.jpeg"
     ],
   "description": "Изумительно вкусные капкейки на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/cakes.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/cakes1.jpeg' | relative_url }}" alt="" /></span>
 <h2>Основа:</h2>
 <ul>
   <li>Морковь</li>
@@ -24,7 +24,7 @@ permalink: "/cakes"
 <h2>Начинки:</h2>
 <ul>
 	<li>Апельсиновый/лимонный курд</li>
-	<li>Ягодный конфетюр (вишня, клубника, малина, ежевика, черника, клюква)</li>
+	<li>Ягодный конфитюр (вишня, клубника, малина, ежевика, черника, клюква)</li>
 	<li>Домашняя карамель</li>
 </ul>
 Количество капкейков для заказа от 6 шт.<br/>
