--- a/_cakes/cheescake.html
+++ b/_cakes/cheescake.html
@@ -16,7 +16,7 @@ permalink: "/cheescake"
 </script>
 <span class="image"><img src="{{ 'assets/images/cheescake.jpg' | relative_url }}" alt="" /></span>
 <h3>350 грн. Вес 1,1 кг.</h3>
-<p>Классический чизкейк "Нью-Йорк". Невероятно нежная основа с творожного сира и сливок в сочетании с песочным сабле. Вкус для истинных гурманов.</p>
+<p>Классический чизкейк "Нью-Йорк". Невероятно нежная основа с творожного сыра и сливок в сочетании с песочным сабле. Вкус для истинных гурманов.</p>
 <hr>
 <h3>Условия заказа:</h3>
 
