--- a/_cakes/spinach.html
+++ b/_cakes/spinach.html
@@ -1,20 +1,20 @@
 ---
 layout: page
-title: Шпинатный
-permalink: "/spinach"
+title: Орео
+permalink: "/oreo"
 ---
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
   "@type": "Product",
-  "name": "Шпинатный торт",
+  "name": "Торт Орео",
   "image": [
     "http://sweetcake.biz.ua/assets/images/spinach.jpg"
     ],
-  "description": "Изумительно вкусный шпинатный торт на заказ в г. Бровары."
+  "description": "Вкусный торт Орео на заказ в г. Бровары."
 }
 </script>
 <span class="image"><img src="{{ 'assets/images/spinach.jpg' | relative_url }}" alt="" /></span>
-<h3>330 грн/кг:</h3>
-<p>Лёгкий бисквит с цитрусовой ноткой, малиновый конфитюр и сливочно-сырный крем.</p>
+<h3>400 грн/кг:</h3>
+<p> Если Вы любите печенье орео, то Вам точно нужно попробовать этот вкус торта!Шоколадный бисквит, крем орео,а между бисквитом и кремом - чизкейк с добавление печенья орео.Детям прийдется по душе!</p>
 {% include terms.html %}
