--- a/_cakes/spinach.html
+++ b/_cakes/spinach.html
@@ -14,7 +14,7 @@ permalink: "/oreo"
   "description": "Вкусный торт Орео на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/spinach.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/.jpg' | relative_url }}" alt="" /></span>
 <h3>400 грн/кг:</h3>
 <p> Если Вы любите печенье орео, то Вам точно нужно попробовать этот вкус торта!Шоколадный бисквит, крем орео,а между бисквитом и кремом - чизкейк с добавление печенья орео.Детям прийдется по душе!</p>
 {% include terms.html %}
