added 2 new cakes

--- a/_cakes/cheescake_3_choc.html
+++ b/_cakes/cheescake_3_choc.html
@@ -7,7 +7,7 @@ permalink: "/3_choc"
 {
   "@context": "http://schema.org/",
   "@type": "Product",
-  "name": "Чизкейк "Три шоколада",
+  "name": "Чизкейк "Три шоколада"",
   "image": [
     "http://sweetcake.biz.ua/assets/images/3_choc.jpg"
     ],
