corrected new photos orientation

--- a/_cakes/cheescake_3_choc.html
+++ b/_cakes/cheescake_3_choc.html
@@ -9,12 +9,12 @@ permalink: "/3_choc"
   "@type": "Product",
   "name": "Чизкейк "Три шоколада"",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/3_choc.jpg"
+    "http://sweetcake.biz.ua/assets/images/3_choc-min.jpg"
     ],
   "description": "Изумительно вкусный торт Чизкейк "Три шоколада" на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/3_choc.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/3_choc-min.jpg' | relative_url }}" alt="" /></span>
 <h3>380 грн. Вес 1,2 кг.</h3>
 <p>Чизкейк "Три шоколада"</p>
 <hr>
