--- a/_cakes/earl_gray.html
+++ b/_cakes/earl_gray.html
@@ -9,12 +9,12 @@ permalink: "/earl_grey"
   "@type": "Product",
   "name": "Торт Эрл Грей",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/earl_grey.jpg"
+    "http://sweetcake.biz.ua/assets/images/earl_grey_new-min.jpg"
     ],
   "description": "Вкусный торт Эрл Грей на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/earl_grey.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/earl_grey_new-min.jpg' | relative_url }}" alt="" /></span>
 <h3>480 грн/кг:</h3>
 <p> Пористый бисквит с добавлением чая Эрл Грей, лаймовой пропиткой, в сочетании с лаймовым ганашем на белом шоколаде. Сливочный крем на основе твророжного сыра. Вкус для настоящего гурмана. </p>
 {% include terms.html %}
