changed barrys cake

--- a/_cakes/barrys.html
+++ b/_cakes/barrys.html
@@ -1,20 +1,20 @@
 ---
 layout: page
-title: Ягодные вариации
+title: Лесные ягоды
 permalink: "/berrys"
 ---
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
   "@type": "Product",
-  "name": "Торт ягодные вариации",
+  "name": "Торт Лесные ягоды",
   "image": [
     "http://sweetcake.biz.ua/assets/images/berry_new.jpeg"
     ],
-  "description": "Изумительно вкусный торт Ягодные вариации на заказ в г. Бровары."
+  "description": "Изумительно вкусный торт Лесные ягоды на заказ в г. Бровары."
 }
 </script>
 <span class="image"><img src="{{ 'assets/images/berry_new.jpeg' | relative_url }}" alt="" /></span>
 <h3>350 грн/кг:</h3>
-<p>Коржи, в основе которых цедра лимона и натуральный йогурт. Воздушный крем с бельгийским белым шоколадом и ягодным пюре. Прослойка ягодного кули.</p>
+<p>Коржи, в основе которых цедра лимона и натуральный йогурт. Воздушно-сливочный крем с бельгийским белым шоколадом. Ягодная прослойка.</p>
 {% include terms.html %}
