--- a/_cakes/barrys.html
+++ b/_cakes/barrys.html
@@ -15,6 +15,6 @@ permalink: "/berrys"
 }
 </script>
 <span class="image"><img src="{{ 'assets/images/berry_new.jpeg' | relative_url }}" alt="" /></span>
-<h3>350 грн/кг:</h3>
-<p>Коржи, в основе которых цедра лимона и натуральный йогурт. Воздушно-сливочный крем с бельгийским белым шоколадом. Ягодная прослойка.</p>
+<h3>400 грн/кг:</h3>
+<p>Бисквиты, в основе которых цедра лимона и натуральный йогурт. Воздушно-сливочный крем с бельгийским белым шоколадом. Ягодная прослойка.</p>
 {% include terms.html %}
