--- a/_cakes/caramel.html
+++ b/_cakes/caramel.html
@@ -14,7 +14,7 @@ permalink: "/caramel"
   "description": "Изумительно вкусный фундучно-карамельный торт на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/funduk.jpg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/.jpg' | relative_url }}" alt="" /></span>
 <h3>395 грн/кг</h3>
 <p>Бисквиты на основе фундучной муки, домашняя сливочная карамель с жареным дробленным фундуком и карамельным кремом.</p>
 
