--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,6 +1,6 @@
----
-title: Начало
-cover-photo: assets/images/banner3.jpg
+<!-- --- -->
+<!-- title: Начало -->
+<!-- cover-photo: assets/images/session6.jpg -->
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-arrows
