--- a/_cakes/hazelnut.html
+++ b/_cakes/hazelnut.html
@@ -9,12 +9,12 @@ permalink: "/hazelnut"
   "@type": "Product",
   "name": "Торт Фундук-чорная смородина",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/hazelnut.jpeg"
+    "http://sweetcake.biz.ua/assets/images/hazelnut.jpg"
     ],
   "description": "Изумительно вкусный торт Фундук-чорная смородина на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/hazelnut.jpeg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/hazelnut.jpg' | relative_url }}" alt="" /></span>
 <h3>550 грн/кг:</h3>
 <p>Ароматные и невесомые бисквиты на основе фундучной пасты.
 Фундучное пралине, шоколадный крем и освежающая кислинка чёрной смородины.</p>
