--- a/_cakes/hazelnut.html
+++ b/_cakes/hazelnut.html
@@ -1,17 +1,17 @@
 ---
 layout: page
-title: Фундук-чорная смородина
+title: Фундук-чёрная смородина
 permalink: "/hazelnut"
 ---
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
   "@type": "Product",
-  "name": "Торт Фундук-чорная смородина",
+  "name": "Торт Фундук-чёрная смородина",
   "image": [
     "http://sweetcake.biz.ua/assets/images/hazelnut.jpg"
     ],
-  "description": "Изумительно вкусный торт Фундук-чорная смородина на заказ в г. Бровары."
+  "description": "Изумительно вкусный торт Фундук-чёрная смородина на заказ в г. Бровары."
 }
 </script>
 <span class="image"><img src="{{ 'assets/images/hazelnut.jpg' | relative_url }}" alt="" /></span>
