--- a/_cakes/cheescake_3_choc.html
+++ b/_cakes/cheescake_3_choc.html
@@ -17,11 +17,5 @@ permalink: "/3_choc"
 <span class="image"><img src="{{ 'assets/images/3_choc-min.jpg' | relative_url }}" alt="" /></span>
 <h3>450 грн. Вес 1,2 кг.</h3>
 <p>Чизкейк "Три шоколада"</p>
-<hr>
-<h3>Условия заказа:</h3>
+{% include terms_cheescake.html %}
 
-Предоплата в 50%. Предпочитаю самовывоз. Доставку оговорим отдельно.
-В стоимость на сайте входит только торт с кремовым покрытием и упаковка.
-Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. 
-Для украшения детских тортиков возможны игрушки и вафельные картинки.
-Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.
