--- a/_cakes/cheescake.html
+++ b/_cakes/cheescake.html
@@ -17,11 +17,5 @@ permalink: "/cheescake"
 <span class="image"><img src="{{ 'assets/images/cheescake.jpg' | relative_url }}" alt="" /></span>
 <h3>400 грн. Вес 1,1 кг.</h3>
 <p>Классический чизкейк "Нью-Йорк". Невероятно нежная основа с творожного сыра и сливок в сочетании с песочным сабле. Вкус для истинных гурманов.</p>
-<hr>
-<h3>Условия заказа:</h3>
 
-Предоплата в 50%. Предпочитаю самовывоз. Доставку оговорим отдельно.
-В стоимость на сайте входит только торт с кремовым покрытием и упаковка.
-Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. 
-Для украшения детских тортиков возможны игрушки и вафельные картинки.
-Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.
+{% include terms_cheescake.html %}
