--- a/_cakes/chocolate-rassberry-caramel.html
+++ b/_cakes/chocolate-rassberry-caramel.html
@@ -15,6 +15,6 @@ permalink: "/choc-ras-car"
 }
 </script>
 <span class="image"><img src="{{ 'assets/images/choc-ras-car.jpeg' | relative_url }}" alt="" /></span>
-<h3>420 грн/кг:</h3>
-<p>Шоколадные коржи, малиновый конфитюр, взбитая домашняя сливочная карамель. Крем на основе творожного сыра.</p>
+<h3>490 грн/кг:</h3>
+<p>Шоколадные коржи, малиновый конфитюр, домашняя сливочная карамель. Крем на основе творожного сыра.</p>
 {% include terms.html %}
