--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -17,7 +17,7 @@ permalink: "/cakes"
 <span class="image"><img src="{{ 'assets/images/cakes1.jpeg' | relative_url }}" alt="" /></span>
 <h2>Основа:</h2>
 <ul>
-  <li>Морковь</li>
+  <li>Ваниль</li>
   <li>Супер шоколад</li>
   <li>Цитрус</li>
 </ul>
