--- a/_cakes/cupcakes.html
+++ b/_cakes/cupcakes.html
@@ -9,12 +9,12 @@ permalink: "/cakes"
   "@type": "Product",
   "name": "Капкейки",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/cakes1.jpeg"
+    "http://sweetcake.biz.ua/assets/images/cakes.jpg"
     ],
   "description": "Изумительно вкусные капкейки на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/cakes1.jpeg' | relative_url }}" alt="" /></span>
+<span class="image"><img src="{{ 'assets/images/cakes.jpg' | relative_url }}" alt="" /></span>
 <h2>Основа:</h2>
 <ul>
   <li>Ваниль</li>
