--- a/_cakes/carrot.html
+++ b/_cakes/carrot.html
@@ -16,6 +16,6 @@ permalink: "/carrot"
 </script>
 <span class="image right"><img src="{{ 'assets/images/.png' | relative_url }}" alt="" /></span>
 <h3>или Carrot cake - 595грн/кг</h3>
-<p>Пряные коржи с добавлением корицы и мускатного ореха, с морковкой, которая совсем не чувствуется, но добавляет пышность и сочность коржам. Большое количество грецких орешков и миндаля. Сливочный крем и домашний карамельный соус в прослойке.</p>
+<p>Пряные коржи с добавлением корицы, имбиря и морковки, которая совсем не чувствуется, но добавляет пышность и сочность коржам. Большое количество грецких орешков. Сливочный крем и карамельно-апельсиновый соус в прослойке.</p>
 
 {% include terms.html %}
