--- a/_cakes/carrot.html
+++ b/_cakes/carrot.html
@@ -9,12 +9,12 @@ permalink: "/carrot"
   "@type": "Product",
   "name": "Морковный торт",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/funduk.jpg"
+    "http://sweetcake.biz.ua/assets/images/carrot_new.jpg"
     ],
   "description": "Изумительно вкусный морковный торт на заказ в г. Бровары."
 }
 </script>
-<span class="image right"><img src="{{ 'assets/images/.png' | relative_url }}" alt="" /></span>
+<span class="image right"><img src="{{ 'assets/images/carrot_new.jpeg' | relative_url }}" alt="" /></span>
 <h3>или Carrot cake - 595грн/кг</h3>
 <p>Пряные коржи с добавлением корицы, имбиря и морковки, которая совсем не чувствуется, но добавляет пышность и сочность коржам. Большое количество грецких орешков. Сливочный крем и карамельно-апельсиновый соус в прослойке.</p>
 
