--- a/_cakes/hazelnut.html
+++ b/_cakes/hazelnut.html
@@ -9,13 +9,13 @@ permalink: "/hazelnut"
   "@type": "Product",
   "name": "Торт Фундук-чёрная смородина",
   "image": [
-    "http://sweetcake.biz.ua/assets/images/hazelnut.jpg"
+    "http://sweetcake.biz.ua/assets/images/hazelnut_2021.jpeg"
     ],
   "description": "Изумительно вкусный торт Фундук-чёрная смородина на заказ в г. Бровары."
 }
 </script>
-<span class="image"><img src="{{ 'assets/images/hazelnut.jpg' | relative_url }}" alt="" /></span>
-<h3>695 грн/кг:</h3>
+<span class="image"><img src="{{ 'assets/images/hazelnut_2021.jpeg' | relative_url }}" alt="" /></span>
+<h3>645 грн/кг:</h3>
 <p>Ароматные и невесомые бисквиты на основе фундучной пасты.
-Фундучное пралине, шоколадный крем и освежающая кислинка чёрной смородины.</p>
+Фундучное пралине, шоколадный крем и освежающая кислинка чёрной смородины или ежевики.</p>
 {% include terms.html %}
